[package]
name = "comterm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.2.2"
crossterm = "0.27.0"
ratatui = { version = "0.24.0", features = ["all-widgets"]}
tui-textarea = "0.3.0"
libc = "0.2.150"
libudev = "0.3.0"
